example for http and template

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <header>
     <script src="play.bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
   </header>
   <body>
     <div id="mydiv">hello world!</div>
